// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: TopPage/ユーザID取得レスポンスエラー 1`] = `
.c17 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: none;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c3 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

.c0 {
  border-bottom: 3px solid #e70000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c2 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c4 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c20 {
  background-color: #f5f5f5;
  border-radius: 4px;
  padding: 10px;
  text-align: center;
}

.c21 {
  margin-bottom: 5px;
  margin-top: 5px;
}

.c22 {
  font-size: 18px;
  font-weight: bold;
}

.c23 {
  margin-bottom: 5px;
  margin-top: 5px;
}

.c24 {
  font-size: 16px;
}

.c25 {
  margin-bottom: 5px;
  margin-top: 5px;
}

.c26 {
  background-color: #333;
  border-radius: 4px;
  color: #f5f5f5;
  font-size: 16px;
  height: 44px;
  width: 150px;
}

.c18 {
  background-color: #0009;
  border: none;
  height: 100%;
  left: 0;
  margin: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c19 {
  margin-top: 70%;
  margin-left: 15px;
  margin-right: 15px;
}

.c14 {
  color: #333;
  font-size: 16px;
}

.c16 {
  color: #666;
  font-size: 16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  border: solid 1px #eee;
  box-shadow: 2px 2px 2px #bdbdbd;
  width: 300px;
  display: inline-block;
}

.c7:active {
  opacity: 0.5;
  box-shadow: 2px 2px 2px #f5f5f5;
}

.c8 {
  background-color: #eee;
  color: #212121;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
  text-align: left;
}

.c9 {
  color: #212121;
  font-size: 12px;
  padding: 10px;
  text-align: left;
}

.c13 {
  border: solid 1px #eee;
  box-shadow: 1px 1px 1px #bdbdbd;
  color: #212121;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  height: 44px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: left;
  width: 300px;
}

.c13:active {
  opacity: 0.5;
  box-shadow: 1px 1px 1px #f5f5f5;
}

.c11 {
  margin: 0;
  padding: 0;
}

.c12 {
  margin-bottom: 10px;
  list-style-type: none;
}

.c5 {
  padding: 15px 10px 20px;
}

.c6 {
  text-align: center;
}

.c15 {
  text-align: right;
}

.c10 {
  border: 0;
  border-top: 1px solid #bdbdbd;
  margin-top: 15px;
  margin-bottom: 15px;
}

<TopPage
  postUser={[Function]}
  user={
    Object {
      "body": Object {
        "error": "Something failed!",
      },
      "exception": Object {},
      "loading": false,
      "status": 500,
    }
  }
>
  <NavigationBar
    onClickBack={null}
    onClickForward={null}
    title="アプリメニュー"
  >
    <styled.nav>
      <nav
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          />
        </styled.div>
        <styled.div>
          <div
            className="c2"
          >
            <NavigationTitleText>
              <styled.p>
                <p
                  className="c3"
                >
                  アプリメニュー
                </p>
              </styled.p>
            </NavigationTitleText>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c4"
          />
        </styled.div>
      </nav>
    </styled.nav>
  </NavigationBar>
  <Main
    onClickStartReissue={[Function]}
  >
    <styled.section>
      <section
        className="c5"
      >
        <styled.div>
          <div
            className="c6"
          >
            <MainMenuButton
              description="磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行"
              onClick={[Function]}
              title="利用できないキャッシュカードの再発行"
            >
              <styled.button
                onClick={[Function]}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  <styled.p>
                    <p
                      className="c8"
                    >
                      利用できないキャッシュカードの再発行
                    </p>
                  </styled.p>
                  <styled.p>
                    <p
                      className="c9"
                    >
                      磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
                    </p>
                  </styled.p>
                </button>
              </styled.button>
            </MainMenuButton>
            <styled.hr>
              <hr
                className="c10"
              />
            </styled.hr>
            <SubMenuList>
              <styled.ul>
                <ul
                  className="c11"
                >
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            申込履歴の確認
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            よくあるご質問
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            残高照会・振込等
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                </ul>
              </styled.ul>
            </SubMenuList>
          </div>
        </styled.div>
        <BasicText>
          <styled.p>
            <p
              className="c14"
            >
              ※今後、本アプリでできる手続を順次拡大していく予定です。
            </p>
          </styled.p>
        </BasicText>
        <styled.div>
          <div
            className="c15"
          >
            <LinkText
              onClick={null}
            >
              <styled.button
                onClick={null}
              >
                <button
                  className="c16"
                  onClick={null}
                >
                  ライセンスについて
                </button>
              </styled.button>
            </LinkText>
          </div>
        </styled.div>
      </section>
    </styled.section>
  </Main>
  <Loading
    show={false}
  >
    <styled.div
      show={false}
    >
      <div
        className="c17"
      />
    </styled.div>
  </Loading>
  <p>
    Something failed!
  </p>
  <p />
  <Modal
    buttonLabel="OK"
    onClick={[Function]}
    title="通信エラー"
  >
    <styled.div>
      <div
        className="c18"
      >
        <styled.div>
          <div
            className="c19"
          >
            <SmallDialog
              buttonLabel="OK"
              onClick={[Function]}
              title="通信エラー"
            >
              <styled.div>
                <div
                  className="c20"
                >
                  <styled.div>
                    <div
                      className="c21"
                    >
                      <styled.p>
                        <p
                          className="c22"
                        >
                          通信エラー
                        </p>
                      </styled.p>
                    </div>
                  </styled.div>
                  <styled.div>
                    <div
                      className="c23"
                    >
                      <styled.p>
                        <p
                          className="c24"
                        >
                          失敗しました。リトライします。
                        </p>
                      </styled.p>
                    </div>
                  </styled.div>
                  <styled.div>
                    <div
                      className="c25"
                    >
                      <styled.button
                        onClick={[Function]}
                      >
                        <button
                          className="c26"
                          onClick={[Function]}
                        >
                          OK
                        </button>
                      </styled.button>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </SmallDialog>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </Modal>
</TopPage>
`;

exports[`should match snapshot: TopPage/ユーザID取得中 1`] = `
.c17 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: inherit;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c3 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

.c0 {
  border-bottom: 3px solid #e70000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c2 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c4 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c14 {
  color: #333;
  font-size: 16px;
}

.c16 {
  color: #666;
  font-size: 16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  border: solid 1px #eee;
  box-shadow: 2px 2px 2px #bdbdbd;
  width: 300px;
  display: inline-block;
}

.c7:active {
  opacity: 0.5;
  box-shadow: 2px 2px 2px #f5f5f5;
}

.c8 {
  background-color: #eee;
  color: #212121;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
  text-align: left;
}

.c9 {
  color: #212121;
  font-size: 12px;
  padding: 10px;
  text-align: left;
}

.c13 {
  border: solid 1px #eee;
  box-shadow: 1px 1px 1px #bdbdbd;
  color: #212121;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  height: 44px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: left;
  width: 300px;
}

.c13:active {
  opacity: 0.5;
  box-shadow: 1px 1px 1px #f5f5f5;
}

.c11 {
  margin: 0;
  padding: 0;
}

.c12 {
  margin-bottom: 10px;
  list-style-type: none;
}

.c5 {
  padding: 15px 10px 20px;
}

.c6 {
  text-align: center;
}

.c15 {
  text-align: right;
}

.c10 {
  border: 0;
  border-top: 1px solid #bdbdbd;
  margin-top: 15px;
  margin-bottom: 15px;
}

<TopPage
  postUser={[Function]}
  user={
    Object {
      "body": Object {},
      "exception": Object {},
      "loading": true,
      "status": null,
    }
  }
>
  <NavigationBar
    onClickBack={null}
    onClickForward={null}
    title="アプリメニュー"
  >
    <styled.nav>
      <nav
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          />
        </styled.div>
        <styled.div>
          <div
            className="c2"
          >
            <NavigationTitleText>
              <styled.p>
                <p
                  className="c3"
                >
                  アプリメニュー
                </p>
              </styled.p>
            </NavigationTitleText>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c4"
          />
        </styled.div>
      </nav>
    </styled.nav>
  </NavigationBar>
  <Main
    onClickStartReissue={[Function]}
  >
    <styled.section>
      <section
        className="c5"
      >
        <styled.div>
          <div
            className="c6"
          >
            <MainMenuButton
              description="磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行"
              onClick={[Function]}
              title="利用できないキャッシュカードの再発行"
            >
              <styled.button
                onClick={[Function]}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  <styled.p>
                    <p
                      className="c8"
                    >
                      利用できないキャッシュカードの再発行
                    </p>
                  </styled.p>
                  <styled.p>
                    <p
                      className="c9"
                    >
                      磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
                    </p>
                  </styled.p>
                </button>
              </styled.button>
            </MainMenuButton>
            <styled.hr>
              <hr
                className="c10"
              />
            </styled.hr>
            <SubMenuList>
              <styled.ul>
                <ul
                  className="c11"
                >
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            申込履歴の確認
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            よくあるご質問
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            残高照会・振込等
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                </ul>
              </styled.ul>
            </SubMenuList>
          </div>
        </styled.div>
        <BasicText>
          <styled.p>
            <p
              className="c14"
            >
              ※今後、本アプリでできる手続を順次拡大していく予定です。
            </p>
          </styled.p>
        </BasicText>
        <styled.div>
          <div
            className="c15"
          >
            <LinkText
              onClick={null}
            >
              <styled.button
                onClick={null}
              >
                <button
                  className="c16"
                  onClick={null}
                >
                  ライセンスについて
                </button>
              </styled.button>
            </LinkText>
          </div>
        </styled.div>
      </section>
    </styled.section>
  </Main>
  <Loading
    show={true}
  >
    <styled.div
      show={true}
    >
      <div
        className="c17"
      />
    </styled.div>
  </Loading>
  <p />
  <p />
</TopPage>
`;

exports[`should match snapshot: TopPage/ユーザID取得例外発生 1`] = `
.c17 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: none;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c3 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

.c0 {
  border-bottom: 3px solid #e70000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c2 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c4 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c14 {
  color: #333;
  font-size: 16px;
}

.c16 {
  color: #666;
  font-size: 16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  border: solid 1px #eee;
  box-shadow: 2px 2px 2px #bdbdbd;
  width: 300px;
  display: inline-block;
}

.c7:active {
  opacity: 0.5;
  box-shadow: 2px 2px 2px #f5f5f5;
}

.c8 {
  background-color: #eee;
  color: #212121;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
  text-align: left;
}

.c9 {
  color: #212121;
  font-size: 12px;
  padding: 10px;
  text-align: left;
}

.c13 {
  border: solid 1px #eee;
  box-shadow: 1px 1px 1px #bdbdbd;
  color: #212121;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  height: 44px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: left;
  width: 300px;
}

.c13:active {
  opacity: 0.5;
  box-shadow: 1px 1px 1px #f5f5f5;
}

.c11 {
  margin: 0;
  padding: 0;
}

.c12 {
  margin-bottom: 10px;
  list-style-type: none;
}

.c5 {
  padding: 15px 10px 20px;
}

.c6 {
  text-align: center;
}

.c15 {
  text-align: right;
}

.c10 {
  border: 0;
  border-top: 1px solid #bdbdbd;
  margin-top: 15px;
  margin-bottom: 15px;
}

<TopPage
  postUser={[Function]}
  user={
    Object {
      "body": Object {},
      "exception": Object {
        "message": "Failed to fetch",
      },
      "loading": false,
    }
  }
>
  <NavigationBar
    onClickBack={null}
    onClickForward={null}
    title="アプリメニュー"
  >
    <styled.nav>
      <nav
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          />
        </styled.div>
        <styled.div>
          <div
            className="c2"
          >
            <NavigationTitleText>
              <styled.p>
                <p
                  className="c3"
                >
                  アプリメニュー
                </p>
              </styled.p>
            </NavigationTitleText>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c4"
          />
        </styled.div>
      </nav>
    </styled.nav>
  </NavigationBar>
  <Main
    onClickStartReissue={[Function]}
  >
    <styled.section>
      <section
        className="c5"
      >
        <styled.div>
          <div
            className="c6"
          >
            <MainMenuButton
              description="磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行"
              onClick={[Function]}
              title="利用できないキャッシュカードの再発行"
            >
              <styled.button
                onClick={[Function]}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  <styled.p>
                    <p
                      className="c8"
                    >
                      利用できないキャッシュカードの再発行
                    </p>
                  </styled.p>
                  <styled.p>
                    <p
                      className="c9"
                    >
                      磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
                    </p>
                  </styled.p>
                </button>
              </styled.button>
            </MainMenuButton>
            <styled.hr>
              <hr
                className="c10"
              />
            </styled.hr>
            <SubMenuList>
              <styled.ul>
                <ul
                  className="c11"
                >
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            申込履歴の確認
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            よくあるご質問
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            残高照会・振込等
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                </ul>
              </styled.ul>
            </SubMenuList>
          </div>
        </styled.div>
        <BasicText>
          <styled.p>
            <p
              className="c14"
            >
              ※今後、本アプリでできる手続を順次拡大していく予定です。
            </p>
          </styled.p>
        </BasicText>
        <styled.div>
          <div
            className="c15"
          >
            <LinkText
              onClick={null}
            >
              <styled.button
                onClick={null}
              >
                <button
                  className="c16"
                  onClick={null}
                >
                  ライセンスについて
                </button>
              </styled.button>
            </LinkText>
          </div>
        </styled.div>
      </section>
    </styled.section>
  </Main>
  <Loading
    show={false}
  >
    <styled.div
      show={false}
    >
      <div
        className="c17"
      />
    </styled.div>
  </Loading>
  <p />
  <p>
    Failed to fetch
  </p>
</TopPage>
`;

exports[`should match snapshot: TopPage/ユーザID取得前 1`] = `
.c17 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: none;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c3 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

.c0 {
  border-bottom: 3px solid #e70000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c2 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c4 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c14 {
  color: #333;
  font-size: 16px;
}

.c16 {
  color: #666;
  font-size: 16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  border: solid 1px #eee;
  box-shadow: 2px 2px 2px #bdbdbd;
  width: 300px;
  display: inline-block;
}

.c7:active {
  opacity: 0.5;
  box-shadow: 2px 2px 2px #f5f5f5;
}

.c8 {
  background-color: #eee;
  color: #212121;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
  text-align: left;
}

.c9 {
  color: #212121;
  font-size: 12px;
  padding: 10px;
  text-align: left;
}

.c13 {
  border: solid 1px #eee;
  box-shadow: 1px 1px 1px #bdbdbd;
  color: #212121;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  height: 44px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: left;
  width: 300px;
}

.c13:active {
  opacity: 0.5;
  box-shadow: 1px 1px 1px #f5f5f5;
}

.c11 {
  margin: 0;
  padding: 0;
}

.c12 {
  margin-bottom: 10px;
  list-style-type: none;
}

.c5 {
  padding: 15px 10px 20px;
}

.c6 {
  text-align: center;
}

.c15 {
  text-align: right;
}

.c10 {
  border: 0;
  border-top: 1px solid #bdbdbd;
  margin-top: 15px;
  margin-bottom: 15px;
}

<TopPage
  postUser={[Function]}
  user={
    Object {
      "body": Object {},
      "exception": Object {},
      "loading": false,
      "status": null,
    }
  }
>
  <NavigationBar
    onClickBack={null}
    onClickForward={null}
    title="アプリメニュー"
  >
    <styled.nav>
      <nav
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          />
        </styled.div>
        <styled.div>
          <div
            className="c2"
          >
            <NavigationTitleText>
              <styled.p>
                <p
                  className="c3"
                >
                  アプリメニュー
                </p>
              </styled.p>
            </NavigationTitleText>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c4"
          />
        </styled.div>
      </nav>
    </styled.nav>
  </NavigationBar>
  <Main
    onClickStartReissue={[Function]}
  >
    <styled.section>
      <section
        className="c5"
      >
        <styled.div>
          <div
            className="c6"
          >
            <MainMenuButton
              description="磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行"
              onClick={[Function]}
              title="利用できないキャッシュカードの再発行"
            >
              <styled.button
                onClick={[Function]}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  <styled.p>
                    <p
                      className="c8"
                    >
                      利用できないキャッシュカードの再発行
                    </p>
                  </styled.p>
                  <styled.p>
                    <p
                      className="c9"
                    >
                      磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
                    </p>
                  </styled.p>
                </button>
              </styled.button>
            </MainMenuButton>
            <styled.hr>
              <hr
                className="c10"
              />
            </styled.hr>
            <SubMenuList>
              <styled.ul>
                <ul
                  className="c11"
                >
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            申込履歴の確認
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            よくあるご質問
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            残高照会・振込等
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                </ul>
              </styled.ul>
            </SubMenuList>
          </div>
        </styled.div>
        <BasicText>
          <styled.p>
            <p
              className="c14"
            >
              ※今後、本アプリでできる手続を順次拡大していく予定です。
            </p>
          </styled.p>
        </BasicText>
        <styled.div>
          <div
            className="c15"
          >
            <LinkText
              onClick={null}
            >
              <styled.button
                onClick={null}
              >
                <button
                  className="c16"
                  onClick={null}
                >
                  ライセンスについて
                </button>
              </styled.button>
            </LinkText>
          </div>
        </styled.div>
      </section>
    </styled.section>
  </Main>
  <Loading
    show={false}
  >
    <styled.div
      show={false}
    >
      <div
        className="c17"
      />
    </styled.div>
  </Loading>
  <p />
  <p />
</TopPage>
`;

exports[`should match snapshot: TopPage/ユーザID取得成功 1`] = `
.c17 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: none;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c3 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

.c0 {
  border-bottom: 3px solid #e70000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c2 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c4 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c14 {
  color: #333;
  font-size: 16px;
}

.c16 {
  color: #666;
  font-size: 16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  border: solid 1px #eee;
  box-shadow: 2px 2px 2px #bdbdbd;
  width: 300px;
  display: inline-block;
}

.c7:active {
  opacity: 0.5;
  box-shadow: 2px 2px 2px #f5f5f5;
}

.c8 {
  background-color: #eee;
  color: #212121;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
  text-align: left;
}

.c9 {
  color: #212121;
  font-size: 12px;
  padding: 10px;
  text-align: left;
}

.c13 {
  border: solid 1px #eee;
  box-shadow: 1px 1px 1px #bdbdbd;
  color: #212121;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  height: 44px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: left;
  width: 300px;
}

.c13:active {
  opacity: 0.5;
  box-shadow: 1px 1px 1px #f5f5f5;
}

.c11 {
  margin: 0;
  padding: 0;
}

.c12 {
  margin-bottom: 10px;
  list-style-type: none;
}

.c5 {
  padding: 15px 10px 20px;
}

.c6 {
  text-align: center;
}

.c15 {
  text-align: right;
}

.c10 {
  border: 0;
  border-top: 1px solid #bdbdbd;
  margin-top: 15px;
  margin-bottom: 15px;
}

<TopPage
  postUser={[Function]}
  user={
    Object {
      "body": Object {
        "id": "ABC123",
      },
      "exception": Object {},
      "loading": false,
      "status": 200,
    }
  }
>
  <NavigationBar
    onClickBack={null}
    onClickForward={null}
    title="アプリメニュー"
  >
    <styled.nav>
      <nav
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          />
        </styled.div>
        <styled.div>
          <div
            className="c2"
          >
            <NavigationTitleText>
              <styled.p>
                <p
                  className="c3"
                >
                  アプリメニュー
                </p>
              </styled.p>
            </NavigationTitleText>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c4"
          />
        </styled.div>
      </nav>
    </styled.nav>
  </NavigationBar>
  <Main
    onClickStartReissue={[Function]}
  >
    <styled.section>
      <section
        className="c5"
      >
        <styled.div>
          <div
            className="c6"
          >
            <MainMenuButton
              description="磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行"
              onClick={[Function]}
              title="利用できないキャッシュカードの再発行"
            >
              <styled.button
                onClick={[Function]}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  <styled.p>
                    <p
                      className="c8"
                    >
                      利用できないキャッシュカードの再発行
                    </p>
                  </styled.p>
                  <styled.p>
                    <p
                      className="c9"
                    >
                      磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
                    </p>
                  </styled.p>
                </button>
              </styled.button>
            </MainMenuButton>
            <styled.hr>
              <hr
                className="c10"
              />
            </styled.hr>
            <SubMenuList>
              <styled.ul>
                <ul
                  className="c11"
                >
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            申込履歴の確認
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            よくあるご質問
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                  <styled.li>
                    <li
                      className="c12"
                    >
                      <MenuButton
                        onClick={[Function]}
                      >
                        <styled.button
                          onClick={[Function]}
                        >
                          <button
                            className="c13"
                            onClick={[Function]}
                          >
                            残高照会・振込等
                          </button>
                        </styled.button>
                      </MenuButton>
                    </li>
                  </styled.li>
                </ul>
              </styled.ul>
            </SubMenuList>
          </div>
        </styled.div>
        <BasicText>
          <styled.p>
            <p
              className="c14"
            >
              ※今後、本アプリでできる手続を順次拡大していく予定です。
            </p>
          </styled.p>
        </BasicText>
        <styled.div>
          <div
            className="c15"
          >
            <LinkText
              onClick={null}
            >
              <styled.button
                onClick={null}
              >
                <button
                  className="c16"
                  onClick={null}
                >
                  ライセンスについて
                </button>
              </styled.button>
            </LinkText>
          </div>
        </styled.div>
      </section>
    </styled.section>
  </Main>
  <Loading
    show={false}
  >
    <styled.div
      show={false}
    >
      <div
        className="c17"
      />
    </styled.div>
  </Loading>
  <p>
    ABC123
  </p>
  <p />
</TopPage>
`;
